--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "babel-runtime": "6.22.0",
     "classnames": "2.2.5",
+    "node-dijkstra": "2.3.0",
     "object-assign": "4.1.0",
     "react": "15.4.1",
     "react-dom": "15.4.1"
